cambia ip añade dns

--- a/views/tiempo-planta.ejs
+++ b/views/tiempo-planta.ejs
@@ -259,7 +259,7 @@ thead tr:nth-child(1) th{
                      
                       <% for (var x = 0;x < infoSupervisor['data_instalaciones'].length;x++){ %>
                         <tr>
-                            <td> <a href="http://192.168.100.127/TouchServer/embed.html##NewLink?arg1=<%=infoSupervisor['data_instalaciones'][x]['cencos_codigo']%>"><%=infoSupervisor['data_instalaciones'][x]['cencos_codigo']%></a> </td>
+                            <td> <a href="http://targit2020.guardservice.cl/TouchServer/embed.html##NewLink?arg1=<%=infoSupervisor['data_instalaciones'][x]['cencos_codigo']%>"><%=infoSupervisor['data_instalaciones'][x]['cencos_codigo']%></a> </td>
                             <td><%=infoSupervisor['data_instalaciones'][x]['cencos_nombre']%></td>
                             <td><%=(parseFloat(infoSupervisor['data_instalaciones'][x]['DURACION'])).toFixed(1)%></td>
                             <td><%=infoSupervisor['data_instalaciones'][x]['CANT_AUDITORIAS']%></td>
