--- a/views/guardias.ejs
+++ b/views/guardias.ejs
@@ -2,6 +2,8 @@
 <head>  
   <meta charset="utf-8">
   <title>ClusterPies</title>
+
+ 
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css"
   integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ=="
   crossorigin=""/>
@@ -9,6 +11,9 @@
   <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"
   integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw=="
   crossorigin=""></script>
+
+
+  
       
 
         
@@ -31,7 +36,18 @@
         <link rel="stylesheet" href="/css/bootstrap-multiselect.css"/>
         <link rel="stylesheet" href="/css/mapa.css"/>
         <link href="http://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css"/>
+
+      <!-- <script src="https://unpkg.com/leaflet@1.0.3/dist/leaflet-src.js" integrity="sha512-WXoSHqw/t26DszhdMhOXOkI7qCiv5QWXhH9R7CgvgZMHz1ImlkVQ3uNsiQKu5wwbbxtPzFXd1hK4tzno2VqhpA==" crossorigin=""></script>
+      -->
      
+      <link rel="stylesheet" href="/marker-cluster-1.4/dist/MarkerCluster.css" />
+      <link rel="stylesheet" href="/marker-cluster-1.4/dist/MarkerCluster.Default.css" />
+      <script src="/marker-cluster-1.4/dist/leaflet.markercluster-src.js"></script>
+      <script src="/marker-cluster-1.4/dist/leaflet.markercluster.js"></script>
+
+
+    
+
         <style>
    #mymap{width:1600px;height:800px}
         </style>
@@ -115,6 +131,7 @@
             var supervisoresColor=JSON.parse('<%-supervisoresColor%>');
             var dataResult=JSON.parse('<%-dataResult%>');
             var geojsonFeature=JSON.parse('<%-geoJSON%>');
+            var geojsonFeatureGuardias=JSON.parse('<%-geoJSONGuardias%>');
             
            //ex jade var resultSupervisor=JSON.parse('!{JSON.stringify(resultSupervisor)}' );
            //var supervisoresColor=JSON.parse('!{supervisoresColor}');
@@ -370,6 +387,32 @@
             // console.log(omnivore.csv('file:///C:/Users/jpierre/Documents/Leaflet-maps/leaflet-maps/views/data.csv', null, customLayer))
             //var csv='a,Trinity College,https://www.edx.org/sites/default/files/trinity1.jpg,"Not in the link <a href=""http://www.trincoll.edu"" target=""_blank"">view website</a> more not in the link","300 Summit St, Hartford CT 06106",0.0,0.0,"300 SUMMIT ST, HARTFORD, CT, 06106",Exact,US Census';
             
+            var testLayer = new L.Marker([17.385044, 78.486671]).addTo(mymap);
+            
+            /*
+            var guardiasLayer = L.geoJson(geojsonFeatureGuardias, {
+                pointToLayer : function(feature,latlng){
+                    return L.marker(latlng, null);
+                }
+
+            }).addTo(mymap);
+
+           */
+           
+           var markers = L.markerClusterGroup();
+
+            var geoJsonLayer = L.geoJson(geojsonFeatureGuardias, {
+    onEachFeature: function (feature, layer) {
+       layer.bindPopup(feature.properties.ficha);
+       // layer.bindPopup("test");
+    }
+});
+markers.addLayer(geoJsonLayer);
+mymap.addLayer(markers);
+
+
+
+
             var customLayer = L.geoJson(geojsonFeature, {
                 pointToLayer : function(feature,latlng){
                 console.log("holaa")   
@@ -451,215 +494,6 @@
             mymap.fitBounds(customLayer.getBounds());
             }
 
-            }
-
-
-             
-            function cambia(tipo){
-                console.log("supervisores Color",supervisoresColor);
-                var cantDotVigenteTotal=0;
-                var cantDotVigenteParcial=0;
-                var cantPlantas=0;
-
-
-
-                /*var sum = [1, 2, 3].reduce((a, b) => a + b, 0);
-                console.log(sum); // 6
-
-                var arr = [{x:1},{x:2},{x:4}];
-
-                arr.reduce(function (a, b) {
-                return {x: a.x + b.x};
-                });*/
-                
-                var dataResult=JSON.parse('!{dataResult}');
-                //cantDotVigenteTotal= dataResult.reduce((a,b)=>{
-                        
-                         //a trae el valor acumulado y b trae el objeto actual
-                //    return {cotiza_dot_vigente_erp: a.cotiza_dot_vigente_erp+b.cotiza_dot_vigente_erp};
-                //});
-
-                //funcionando trae suma de un objeto
-                //var sum= dataResult.reduce((a,b)=>{
-                //    return {cotiza_dot_vigente_erp: a.cotiza_dot_vigente_erp+b.cotiza_dot_vigente_erp}
-                //});
-                //console.log(sum);
-                //console.log(dataResult);
-                var valor;
-                if (tipo=='supervisor'){
-                     valor = document.getElementById("supervisor_select").value;
-                     document.getElementById("cenco1_select").value="all"
-
-                    //si es distinto all se obtiene la cantidad de personal en base al filtro, pero si es all se debe sumar todo                  
-                     if(valor!='all'){
-                        cantDotVigenteTotal= dataResult.reduce((a,b)=>{
-                        
-                         //a trae el valor acumulado y b trae el objeto actual
-                        if( b.administrativo_nombre && b.administrativo_nombre==valor )
-                            return {cotiza_dot_vigente_erp: a.cotiza_dot_vigente_erp+b.cotiza_dot_vigente_erp};
-                        else 
-                            return{cotiza_dot_vigente_erp: a.cotiza_dot_vigente_erp};
-                        });
-
-                     }else{
-                    //funcionando trae suma de un objeto
-                        cantDotVigenteTotal= dataResult.reduce((a,b)=>{
-                        return {cotiza_dot_vigente_erp: a.cotiza_dot_vigente_erp+b.cotiza_dot_vigente_erp}
-                        });
-                     }
-
-
-                    
-                    
-                 }
-                if(tipo=='cenco1'){
-                     valor = document.getElementById("cenco1_select").value;
-                      document.getElementById("supervisor_select").value="all"
-                                          //si es distinto all se obtiene la cantidad de personal en base al filtro, pero si es all se debe sumar todo                  
-                     if(valor!='all'){
-                        cantDotVigenteTotal= dataResult.reduce((a,b)=>{
-                        
-                         //a trae el valor acumulado y b trae el objeto actual
-                        if( b.cenco1_desc && b.cenco1_desc==valor )
-                            return {cotiza_dot_vigente_erp: a.cotiza_dot_vigente_erp+b.cotiza_dot_vigente_erp};
-                        else 
-                            return{cotiza_dot_vigente_erp: a.cotiza_dot_vigente_erp};
-                        });
-
-                     }else{
-                    //funcionando trae suma de un objeto
-                        cantDotVigenteTotal= dataResult.reduce((a,b)=>{
-                        return {cotiza_dot_vigente_erp: a.cotiza_dot_vigente_erp+b.cotiza_dot_vigente_erp}
-                        });
-                     }
-
-                      
-                }
-                console.log(tipo);
-                console.log(valor);
-
-                
-                console.log(valor)
-                console.log("el valor");
-
-               
-
-  
-             mymap.eachLayer(function (layer) {
-            mymap.removeLayer(layer)
-            }) ; 
- 
-            L.tileLayer('https://api.mapbox.com/styles/v1/{id}/tiles/{z}/{x}/{y}?access_token={accessToken}', {
-            attribution: '© <a href="https://www.mapbox.com/about/maps/">Mapbox</a> © <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a> <strong><a href="https://www.mapbox.com/map-feedback/" target="_blank">Improve this map</a></strong>',
-            maxZoom: 18,
-            id: 'mapbox/streets-v11',
-            accessToken: 'pk.eyJ1IjoianBpZXJyZXAiLCJhIjoiY2pkcWZxZzh1MHF2YjJ3cWxweWxtOTJ0NyJ9.0Yu1-taeeVUfHfSXBGE-Tg'
-            }).addTo(mymap);
-            /*
-            var geojsonFeature = [{
-            "type": "Feature",
-            "properties": {
-            "name": "Coors Field",
-            "amenity": "Baseball Stadium",
-            "popupContent": "This is where the Rockies play!",
-            "Group":"a"
-            },
-            "geometry": {
-            "type": "Point",
-            "coordinates": [-71.99404, 39.75621]
-            }
-            },
-            {
-            "type": "Feature",
-            "properties": {
-            "name": "Coors Field",
-            "amenity": "Baseball Stadium",
-            "popupContent": "This is where the Rockies play!",
-            "Group":"a"
-            },
-            "geometry": {
-            "type": "Point",
-            "coordinates": [41.69861,-72.724141]
-            }
-            }]; */
-
-            var geojsonFeature=JSON.parse('!{geoJSON}');
-
-            // console.log(omnivore.csv('file:///C:/Users/jpierre/Documents/Leaflet-maps/leaflet-maps/views/data.csv', null, customLayer))
-            //var csv='a,Trinity College,https://www.edx.org/sites/default/files/trinity1.jpg,"Not in the link <a href=""http://www.trincoll.edu"" target=""_blank"">view website</a> more not in the link","300 Summit St, Hartford CT 06106",0.0,0.0,"300 SUMMIT ST, HARTFORD, CT, 06106",Exact,US Census';
-            
-            var customLayer = L.geoJson(geojsonFeature, {
-                pointToLayer : function(feature,latlng){
-                console.log("holaa")   
-                console.log(feature)
-
-                let featureDotacion=0;
-                //si tiene dotacion vigente se captura el dato para luego hacer la funcion 
-                // de calculo del radio en base al valor total
-                if (feature.properties && feature.properties.dotacion_vigente) 
-                    featureDotacion=feature.properties.dotacion_vigente;
-                let valorRadio=0;
-                //para no obtener 0/0 y nos de error
-                if  (featureDotacion!=0&&cantDotVigenteTotal.cotiza_dot_vigente_erp!=0)
-                    valorRadio=featureDotacion/cantDotVigenteTotal.cotiza_dot_vigente_erp
-                //para evitar que se escalen demasiado los circulos //no es posible ya que se deben considerar la cantidad de plantas no de personas
-                if(cantDotVigenteTotal.cotiza_dot_vigente_erp==1)
-                    valorRadio=0;              
-
-                console.log(featureDotacion)
-                console.log(cantDotVigenteTotal.cotiza_dot_vigente_erp)
-                let geojsonMarkerOptions = {
-                radius: 8+(20*(valorRadio)),
-              //  fillColor: "#ff7800",
-               fillColor:supervisoresColor.find(x=>x.administrativo_id==feature.properties.administrativo_id)['color'],
-                color: "#000",
-                weight: 1,
-                opacity: 1,
-                fillOpacity: 0.8
-                };
-
-                return L.circleMarker(latlng, geojsonMarkerOptions);
-                },
-                filter:function(feature,layer){
-                if(valor!='all' &&tipo=='cenco1'){
-                    
-                return feature.properties.cenco1_desc==valor;
-
-                }else if(valor!='all' &&tipo=='supervisor'){
-                    
-                return feature.properties.administrativo_nombre==valor;                
-                
-                }else{
-                    return true;
-                }
-                },onEachFeature:function(feature,layer){
-                if (feature.properties && feature.properties.name) {
-                    let dot_vendida=0;
-                    let dot_asignada=0;
-                    let dot_vigente=0;
-                    if(feature.properties.dotacion_vendida)
-                        dot_vendida=feature.properties.dotacion_vendida
-                    if(feature.properties.dotacion_asignada)
-                        dot_asignada=feature.properties.dotacion_asignada
-                    if(feature.properties.dotacion_vigente)
-                        dot_vigente=feature.properties.dotacion_vigente
-
-                    var label=`<p style='font-weight: bold;'>`+feature.properties.cenco2_codi+" "+feature.properties.name+`</p> <p> Dotación vendida: `+dot_vendida+`<br>  Dotación asignada: `+dot_asignada+`<br>  Dotación vigente: `+dot_vigente+`<br> Supervisor: `   +feature.properties.administrativo_nombre+`</p>`
-                layer.bindPopup(label).openPopup();
-                }   
-                }
-                }).addTo(mymap);
-
-            mymap.fitBounds(customLayer.getBounds());
-             
-             
-             /*var runLayer = omnivore.csv(csv, null, customLayer)
-            .on('ready', function() {
-            // http://leafletjs.com/reference.html#map-fitbounds
-            mymap.fitBounds(runLayer.getBounds());
-            }).addTo(mymap);
-            console.log("Listo");*/
-            
             }
 
       </script>
