--- a/views/guardias.ejs
+++ b/views/guardias.ejs
@@ -403,7 +403,9 @@
 
             var geoJsonLayer = L.geoJson(geojsonFeatureGuardias, {
     onEachFeature: function (feature, layer) {
-       layer.bindPopup(feature.properties.ficha);
+        var label=`<p style='font-weight: bold;'>`+feature.properties.RUT_ID+`</p> <p> ESTADO ACTUAL: `+feature.properties.ESTADO+`<br>  FECHA INGRESO: `+feature.properties.FECHA_INGRESO+`<br>  EDAD: `+feature.properties.EDAD+`<br>  FECHA TERM. CONTR.: `+feature.properties.FECHA_TERM_CONTRATO+`<br> TELEFONO: `   +feature.properties.TELEFONO1+`</p>`
+
+       layer.bindPopup(label);
        // layer.bindPopup("test");
     }
 });
