--- a/views/control-matriz-reportes.ejs
+++ b/views/control-matriz-reportes.ejs
@@ -66,6 +66,8 @@
                   <option  value="8">MATRIZ PRINCIPAL </option>
                   <option value="9">MATRIZ RESUMEN</option>
                   <option value="10">MATRIZ ACCION INMEDIATA</option>
+                  <option value="13">MATRIZ MAPAS TIEMPO PLANTA</option>
+                  <option value="14">MATRIZ MAPAS NO CONFORMIDADES</option>
      
                 </select>
               </div>
